# bcpi

./: README.md  pyproject.toml
notebooks/: ssvep.ipynb
src/bcpi/: __init__.py  app.py  bcpi.conf  bcpi.service  command.py  config.py  core.py  ezmsg.service  frequencydecoder.py  messages.py  stim_client.py  stim_server.py  strategy.py  system.py  temporalpreproc.py  topics.py
